--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <properties>
   <jdk.version>1.8</jdk.version>
   <spring.version></spring.version>
-  <sonar.host.url>http://65.0.105.172:9000/</sonar.host.url>
+  <sonar.host.url>http://13.126.33.206:9000/</sonar.host.url>
  <!--  <sonar.login>admin</sonar.login> 
   <sonar.password>admin</sonar.password> -->
     <sonar.login>6aeba4bf6c78e1d376d95ba026b984dfef655396</sonar.login> 
@@ -29,12 +29,12 @@
   <repository>
    <id>nexus</id>
    <name>atmproject release</name>
-   <url>http://3.108.250.87:8081/repository/Jenkins_pipeline_01/</url>
+   <urlhttp://3.108.55.156:8081/repository/Jenkins_pipeline_01/</url>
   </repository>
   <snapshotRepository>
   <id>nexus</id>
   <name>atmproject snapshot</name>
-  <url>http://3.108.250.87:8081/repository/Snapshot_01/</url>
+  <url>http://3.108.55.156:8081/repository/maven-snapshots/</url>
   </snapshotRepository>
   </distributionManagement>
 	
