--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
   <repository>
    <id>nexus</id>
    <name>atmproject release</name>
-   <urlhttp:http://3.108.55.156:8081/repository/Jenkins_pipeline_01/</url>
+   <url>http://3.108.55.156:8081/repository/Jenkins_pipeline_01/</url>
   </repository>
   <snapshotRepository>
   <id>nexus</id>
